--- a/introduction_to_htmlcss/inline_block_elements/index.css
+++ b/introduction_to_htmlcss/inline_block_elements/index.css
@@ -1,7 +1,11 @@
 div  {
-    color: blue
+    color: blue;
+    border-style: solid;
+    margin-bottom: 20px;
 }
 
 span {
-    color: chartreuse
+    color: chartreuse;
+    border-style: double;
+    margin-right: 10px;
 }
