Question 8 doubt resolved

--- a/introduction_to_jquery/q8/style.css
+++ b/introduction_to_jquery/q8/style.css
@@ -13,3 +13,9 @@ button[id='my-button']{
     background-color: #009b79;
     color: white;
 }
+
+.footer{
+    text-align: center;
+    color: #ccc;
+
+}
