--- a/introduction_to_jquery/q10/style.css
+++ b/introduction_to_jquery/q10/style.css
@@ -71,3 +71,14 @@
     margin: 0px;
     border-bottom: 0px;
 }
+
+@media only screen and (max-width: 700px){
+    .col-12, .col-10{
+        width: 100%;
+    }
+
+    .col-12 .navbar ul .menu .sub-menu-shown{
+        width: 50%;
+        margin: 10px 0px 0px 10px;
+    }
+}
