--- a/introduction_to_jquery/q6/style.css
+++ b/introduction_to_jquery/q6/style.css
@@ -9,12 +9,12 @@ button{
     padding: 20px;
 }
 
-div {
+.mydiv {
     background-color: #ccc;
     font-size: 20px;
     padding: 20px;
 }
 
-div p{
+p{
     background-color: red;
 }
