--- a/introduction_to_css/ex3/styles/style.css
+++ b/introduction_to_css/ex3/styles/style.css
@@ -25,7 +25,7 @@ a{
     padding: 10px;
 }
 
-.page-wrapper section{
+.page-wrapper section, .page-wrapper footer{
     font-family: 'Open Sans', sans-serif;
     letter-spacing: 1px;
     line-height: 25px;
@@ -144,4 +144,12 @@ header .times{
 
 .social a:hover{
     color: #ccc;
+}
+
+footer h3{
+    margin-bottom: 6px;
+}
+
+footer .page-footer-email{
+    text-align: center; 
 }
