--- a/page_layouts_and_structure/prac/style/style.css
+++ b/page_layouts_and_structure/prac/style/style.css
@@ -8,13 +8,20 @@ body{
 }
 
 .container{
-    margin: 15px 0px;
+    padding: 0px 0px 15px 0px;
+    margin: 6px 0px;
+    box-sizing: border-box;
 }
 
-header{
+.hfwrapper{
     background-color: rgb(45, 250, 96);
-    width: 100%;
     padding: 15px 3px;
+}
+
+footer .hfwrapper{
+    text-align: right;
+    color: rgb(145, 137, 137);
+    padding-right: 20px;
 }
 
 .logo, nav, .social{
@@ -73,10 +80,12 @@ header nav{
 .highlights{
     background-color: #ccc;
     overflow: hidden;
+    padding: 9px 0px 14px 0px;
 }
 
 .highlights ul{
     width: 100%;
+    /* margin: 0px */
 }
 
 .highlights ul li i {
@@ -91,6 +100,7 @@ header nav{
     margin-right: 0.2%;
     width: 21%;
     position: relative;
+    margin-top: 1%;
 }
 
 .highlights ul li:last-child{
@@ -111,7 +121,7 @@ header nav{
     left: 0;
     right: 0;
     /* margin-right: 100%; */
-    margin: 0 auto;
+    margin: 10px auto 0px auto;
     transition: 0.5s;
     
 }
