minor bugs fixed

--- a/forms_tables/ex2/assets/styles/styles.css
+++ b/forms_tables/ex2/assets/styles/styles.css
@@ -5,12 +5,7 @@ table{
     border-spacing: 10px;
     border:auto;
     display: table;
-    border: solid;
-    border-top-width: 10px;
-    border-right-width: 10px;
-    border-bottom-width: 10px;
-    border-left-width: 10px;
-    border-color: grey;
+    border: 10px solid grey;
 }
 
 table caption{
@@ -19,19 +14,15 @@ table caption{
     margin: 10px auto;
 }
 
-td, th{
-    border:2px solid grey;
-}
+
 
 table th{
     font-weight: bold;
 }
 
-table tr{
-}
-
 table td, table th{
-    padding: 4px
+    padding: 4px;
+    border:2px solid grey;
 }
 
 table td{
