--- a/css_animations_background_sprite/assets/styles/styles.css
+++ b/css_animations_background_sprite/assets/styles/styles.css
@@ -9,8 +9,10 @@
     background-image: url(../images/image.jpeg);
     width: 500px;
     height: 500px;
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat; */
     background-position: 50% 50%;
     border: thin solid black;
     margin: auto;
+    overflow: scroll;
+    background-attachment: local;
 }
