--- a/css_animations_background_sprite/assets/styles/styles.css
+++ b/css_animations_background_sprite/assets/styles/styles.css
@@ -16,3 +16,37 @@
     overflow: scroll;
     background-attachment: local;
 }
+
+.content p{
+    background-color: #FF0000;
+}
+
+.container .footer{
+    text-align: center;
+    margin: 30px 0px;
+
+    width: 100%;
+    height: 128px;
+}
+
+.footer span{
+    background-image: url(../images/174834-social-media-logos.png);
+    background-repeat:no-repeat; 
+    display: inline-block;
+    width: 128px;
+    height: 128px;
+    margin: 0px 20px;
+}
+
+.footer .facebook{
+    background-position: -236px -27px;
+}
+
+.footer .instagram{
+    background-position: -36px -27px;
+}
+
+.footer .twitter{
+    background-position: -436px -27px;
+
+}
