--- a/css_animations_background_sprite/assets/styles/styles.css
+++ b/css_animations_background_sprite/assets/styles/styles.css
@@ -1,6 +1,6 @@
 .container{
     width: 100%;
-    height: 768px;
+    height: 1000x;
     background-image: url(../images/videoblocks-white-texture-geometric-abstract-triangle-seamless-loop_hdesm7kp9z_thumbnail-full01.png);
     background-repeat: no-repeat;
 }
@@ -23,7 +23,7 @@
 
 .container .footer{
     text-align: center;
-    margin: 30px 0px;
+    margin: 30px 0px 0px 0px;
 
     width: 100%;
     height: 128px;
@@ -62,6 +62,7 @@
     animation: animation-one;
     animation-duration: 4s;
     animation-delay: 3s;
+    animation-iteration-count: 2;
 }
 
 @keyframes animation-one{
