minor fixes in styling

--- a/responsive_two/assets/styles/styles.css
+++ b/responsive_two/assets/styles/styles.css
@@ -59,6 +59,7 @@ p{
     background-image: url(../images/banner.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
     position: relative;
 }
 
