--- a/htmlcss_essentials/ex2/styles/style.css
+++ b/htmlcss_essentials/ex2/styles/style.css
@@ -74,7 +74,7 @@ a:hover{
     font-size: 12px;
 }
 
-.signin div{
+.signin .form-group{
     vertical-align: top;
     display: inline-block;
     padding: 0px 4px;
