--- a/introduction_to_css/ex3/styles/style.css
+++ b/introduction_to_css/ex3/styles/style.css
@@ -80,29 +80,26 @@ header .times{
 
 .tag-line div{
     border: 3px solid black;
-    /* border-bottom: thick solid black; */
     width:20%;
     margin: auto;
-    padding: 10px 10px 0px 10px;
     height: 40px;
 }
 
 .tag-line span{
-    position: absolute;
-    left: 0;
-    right: 0;
-    width: 100%;
-    margin: auto;
+    width: 200%;
     background-color: #fff;
     height: 30px;
-    padding-top: 5px;
+    display: inline-block;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .tag-line{
     font-size: 27px;
     font-family: 'Open Sans', sans-serif;
     text-align: center;
-    position: relative;
 }
 
 .two-columns .first{
