--- a/forms_tables/ex4/assets/styles/styles.css
+++ b/forms_tables/ex4/assets/styles/styles.css
@@ -14,6 +14,11 @@ table .time{
     text-align: right;
 }
 
+table .men, table .women{
+    text-align: center;
+    vertical-align: middle;
+}
+
 table .men{
     background-color: #98ccfe;
 }
