--- a/introduction_to_css/ex3/styles/style.css
+++ b/introduction_to_css/ex3/styles/style.css
@@ -114,10 +114,10 @@ header .times{
     margin-bottom: 6px;
 }
 
-/* .first img{
+.first img{
     width: 100%;
     height: 269px;
-} */
+}
 
 .two-columns .second{
     width: 48.5%;
@@ -126,7 +126,7 @@ header .times{
     vertical-align: top;
 }
 
-/* .two-columns .second .img-div{
+.two-columns .second .img-div{
     width: 100%;
     height: 130px;
     overflow: hidden;
@@ -135,12 +135,12 @@ header .times{
 
 .two-columns .second img{
     width: 100%;
-} */
+}
 
-/* .two-columns .second img[alt="GeekCombat02"]{
+.two-columns .second img[alt="GeekCombat02"]{
     position: relative;
     top: -53%;
-} */
+}
 
 .social{
     /* display: block; */
